--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -65,7 +65,8 @@
 	 color: #0a0a0a;
 }
  .popup__text p {
-	 /* font-size: 0.875rem; */
+	 font-size: 14px;
+	 text-align: justify;
 	 color: #686868;
 	 line-height: 1.5;
 }
